# LinuxRT_on_Rpi4b

./: CMakeLists.txt  Makefile  README.md  prj.conf
apps/: server.c
boards/: rpi_4b.overlay
common/: authorization.c  authorization.h
drivers/: sensors.c
drivers/certs/: certs.h
protocol/: protocol.c  protocol.h
scripts/: gen_cert_headers.sh  quick_start.sh
tests/: bench_binarysearch_linuxrt.c  bench_binarysearch_zephyr.c  bench_fir2dim_linuxrt.c  bench_fir2dim_zephyr.c  bench_matrix1_linuxrt.c  bench_matrix1_zephyr.c  bench_md5_linuxrt.c  bench_md5_zephyr.c  bench_sha_linuxrt.c  bench_sha_zephyr.c
